--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 									<tasks>
 										<echo>!!!!!!!!!!!!!!!!!!!!   CLEAN COMPILE   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
 										<echo>mvn.command: ${mvn.command}</echo>
-										<exec executable="${mvn.command}">
+										<exec failonerror="true" executable="${mvn.command}">
 											<arg value="clean" />
 											<arg value="compile" />
 										</exec>
@@ -86,7 +86,7 @@
 									<tasks>
 										<echo>!!!!!!!!!!!!!!!!!!!!!!!!   PACKAGE   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
 										<echo>mvn.command: ${mvn.command}</echo>
-										<exec executable="${mvn.command}">
+										<exec failonerror="true" executable="${mvn.command}">
 											<arg value="package" />
 										</exec>
 										<echo>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
