--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,13 @@
 	<groupId>test</groupId>
 	<artifactId>test.git</artifactId>
 	<version>1.0</version>
+	<packaging>pom</packaging>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.mina</groupId>
-			<artifactId>mina-core</artifactId>
-			<version>2.0.4</version>
-		</dependency>
-	</dependencies>
-
+	<modules>
+		<module>module1</module>
+		<module>module2</module>
+	</modules>
+	
 	<profiles>
 		<profile>
 			<id>linux</id>
@@ -56,7 +54,9 @@
 										<echo>mvn.command: ${mvn.command}</echo>
 										<exec failonerror="true" executable="${mvn.command}">
 											<arg value="clean" />
-											<arg value="compile" />
+											<arg value="install" />
+											<arg value="-DskipTests" />
+											<arg value="-Dosgi.test.skip=true" />
 										</exec>
 										<echo>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
 									</tasks>
@@ -88,6 +88,7 @@
 										<echo>mvn.command: ${mvn.command}</echo>
 										<exec failonerror="true" executable="${mvn.command}">
 											<arg value="package" />
+											<arg value="-DskipTests" />
 										</exec>
 										<echo>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
 									</tasks>
