--- a/module1/pom.xml
+++ b/module1/pom.xml
@@ -1,8 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<groupId>test</groupId>
+		<artifactId>test.git</artifactId>
+		<version>1.0</version>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>test</groupId>
 	<artifactId>module1</artifactId>
-	<version>1.0</version>
 
 </project>
