--- a/pom.xml
+++ b/pom.xml
@@ -1,160 +1,203 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>test</groupId>
-	<artifactId>test.git</artifactId>
-	<version>1.0</version>
-	<packaging>pom</packaging>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>test</groupId>
+    <artifactId>test.git</artifactId>
+    <version>1.0</version>
+    <packaging>pom</packaging>
 
-	<modules>
-		<module>module1</module>
-		<module>module2</module>
-	</modules>
+    <modules>
+        <module>module1</module>
+        <module>module2</module>
+    </modules>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>ru.rambler</groupId>
-					<artifactId>maven-junit4osgi-plugin-ce</artifactId>
-					<version>1.0.0_patch13</version>
-					<executions>
-						<execution>
-							<id>prepare-structure</id>
-							<phase>compile</phase>
-							<goals>
-								<goal>prepare-structure</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>test</id>
-							<phase>integration-test</phase>
-							<goals>
-								<goal>test</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.scr</artifactId>
+                <version>1.6.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.configadmin</artifactId>
+                <version>1.2.8</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<executions>
-						<execution>
-							<id>copy-dependencies</id>
-							<phase>package</phase>
-							<goals>
-								<goal>copy-dependencies</goal>
-							</goals>
-							<configuration>
-								<outputDirectory>${project.build.directory}/alldependencies</outputDirectory>
-								<overWriteReleases>false</overWriteReleases>
-								<overWriteSnapshots>false</overWriteSnapshots>
-								<overWriteIfNewer>true</overWriteIfNewer>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-	<profiles>
-		<profile>
-			<id>linux</id>
-			<activation>
-				<os>
-					<family>Linux</family>
-				</os>
-			</activation>
-			<properties>
-				<mvn.command>mvn</mvn.command>
-			</properties>
-		</profile>
-		<profile>
-			<id>windows</id>
-			<activation>
-				<os>
-					<family>windows</family>
-				</os>
-			</activation>
-			<properties>
-				<mvn.command>mvn.bat</mvn.command>
-			</properties>
-		</profile>
-		<profile>
-			<id>p1</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<!-- ВНИМАНИЕ! Обязательный тег! Чтобы профиль не выполнялся для модулей 
-							проекта -->
-						<inherited>false</inherited>
-						<executions>
-							<execution>
-								<id>test1ex</id>
-								<phase>initialize</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<tasks>
-										<echo>!!!!!!!!!!!!!!!!!!!! CLEAN INSTALL
-											!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
-										<echo>mvn.command: ${mvn.command}</echo>
-										<exec failonerror="true" executable="${mvn.command}">
-											<arg value="clean" />
-											<arg value="install" />
-											<arg value="-DskipTests" />
-											<arg value="-Dosgi.test.skip=true" />
-										</exec>
-										<echo>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
-									</tasks>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <!-- <plugin> <groupId>ru.rambler</groupId> <artifactId>maven-junit4osgi-plugin-ce</artifactId> 
+                    <version>1.0.0_patch13</version> <executions> <execution> <id>prepare-structure</id> 
+                    <phase>compile</phase> <goals> <goal>prepare-structure</goal> </goals> </execution> 
+                    <execution> <id>test</id> <phase>integration-test</phase> <goals> <goal>test</goal> 
+                    </goals> </execution> </executions> </plugin> -->
+                <plugin>
+                    <groupId>ru.rambler</groupId>
+                    <artifactId>maven-testengine-plugin</artifactId>
+                    <version>1.0</version>
+                    <executions>
+                        <execution>
+                            <id>prepare-structure</id>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>prepare-structure</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>ftest</id>
+                            <phase>integration-test</phase>
+                            <goals>
+                                <goal>ftest</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
 
-		<profile>
-			<id>p2</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<!-- ВНИМАНИЕ! Обязательный тег! Чтобы профиль не выполнялся для модулей 
-							проекта -->
-						<inherited>false</inherited>
-						<executions>
-							<execution>
-								<id>test2ex</id>
-								<phase>initialize</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<tasks>
-										<echo>!!!!!!!!!!!!!!!!!!!!!!!! ASSEMBLY
-											!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
-										<echo>mvn.command: ${mvn.command}</echo>
-										<exec failonerror="true" executable="${mvn.command}">
-											<arg value="assembly:assembly" />
-											<arg value="-fdistr/pom.xml" />
-											<arg value="-DskipTests" />
-										</exec>
-										<echo>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
-									</tasks>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>copy-dependencies</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>copy-dependencies</goal>
+                            </goals>
+                            <configuration>
+                                <outputDirectory>${project.build.directory}/alldependencies</outputDirectory>
+                                <overWriteReleases>false</overWriteReleases>
+                                <overWriteSnapshots>false</overWriteSnapshots>
+                                <overWriteIfNewer>true</overWriteIfNewer>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
-	</profiles>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-scr-plugin</artifactId>
+                <version>1.7.2</version>
+                <executions>
+                    <execution>
+                        <id>generate-scr-scrdescriptor</id>
+                        <goals>
+                            <goal>scr</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
+    <profiles>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>Linux</family>
+                </os>
+            </activation>
+            <properties>
+                <mvn.command>mvn</mvn.command>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <mvn.command>mvn.bat</mvn.command>
+            </properties>
+        </profile>
+        <profile>
+            <id>p1</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <!-- ВНИМАНИЕ! Обязательный тег! Чтобы профиль не 
+                            выполнялся для модулей проекта -->
+                        <inherited>false</inherited>
+                        <executions>
+                            <execution>
+                                <id>test1ex</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo>!!!!!!!!!!!!!!!!!!!! CLEAN
+                                            INSTALL
+                                            !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
+                                        <echo>mvn.command:
+                                            ${mvn.command}</echo>
+                                        <exec failonerror="true"
+                                            executable="${mvn.command}">
+                                            <arg value="clean" />
+                                            <arg value="install" />
+                                            <arg value="-DskipTests" />
+                                            <arg value="-Dosgi.test.skip=true" />
+                                        </exec>
+                                        <echo>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>p2</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <!-- ВНИМАНИЕ! Обязательный тег! Чтобы профиль не 
+                            выполнялся для модулей проекта -->
+                        <inherited>false</inherited>
+                        <executions>
+                            <execution>
+                                <id>test2ex</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo>!!!!!!!!!!!!!!!!!!!!!!!!
+                                            ASSEMBLY
+                                            !!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
+                                        <echo>mvn.command:
+                                            ${mvn.command}</echo>
+                                        <exec failonerror="true"
+                                            executable="${mvn.command}">
+                                            <arg value="assembly:assembly" />
+                                            <arg value="-fdistr/pom.xml" />
+                                            <arg value="-DskipTests" />
+                                        </exec>
+                                        <echo>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</echo>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
 </project>
