--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,20 @@
                 <artifactId>org.apache.felix.configadmin</artifactId>
                 <version>1.2.8</version>
             </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.1</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
     <build>
         <pluginManagement>
             <plugins>
-                <!-- <plugin> <groupId>ru.rambler</groupId> <artifactId>maven-junit4osgi-plugin-ce</artifactId> 
-                    <version>1.0.0_patch13</version> <executions> <execution> <id>prepare-structure</id> 
-                    <phase>compile</phase> <goals> <goal>prepare-structure</goal> </goals> </execution> 
-                    <execution> <id>test</id> <phase>integration-test</phase> <goals> <goal>test</goal> 
-                    </goals> </execution> </executions> </plugin> -->
                 <plugin>
                     <groupId>ru.rambler</groupId>
                     <artifactId>maven-testengine-plugin</artifactId>
